--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div id = "blank2" class = col-md-4></div>
     </div>
 
-    <br><br>
+    <br>
 
     <!-- Game Instructions Here -->
     <div id = instructions class = row>
@@ -38,7 +38,7 @@
             <div id = "blank2" class = col-md-2></div>
         </div>
 
-        <br><br>
+        <br>
 
     <!-- Random Number Goes Here -->
     <div id = number class = row>
@@ -54,19 +54,17 @@
             <div id = "blank2" class = col-md-4></div>
         </div>
 
-    <br><br>
-
     <!-- Crystals Go Here -->
     <div id = boxes class = row>
-            <div id = "crystal1" class = col-md-2></div>
-            <div id = "crystal1" class = col-md-2>placeholder</div>
-            <div id = "crystal2" class = col-md-2>placeholder</div>
-            <div id = "crystal3" class = col-md-2>placeholder</div>
-            <div id = "crystal4" class = col-md-2>placeholder</div>
-            <div id = "crystal1" class = col-md-2></div>
+            <div id = "blank1" class = col-md-2></div>
+            <div id = "crystal1" class = col-md-2><img id="Crystal1" src="assets/images/crystal1.jpg" alt="Crystal1" height="75px" width="160px"></div>
+            <div id = "crystal2" class = col-md-2><img id="Crystal2" src="assets/images/crystal2.jpg" alt="Crystal2" height="75px" width="160px"></div>
+            <div id = "crystal3" class = col-md-2><img id="Crystal3" src="assets/images/crystal3.jpg" alt="Crystal3" height="75px" width="160px"></div>
+            <div id = "crystal4" class = col-md-2><img id="Crystal4" src="assets/images/crystal4.jpg" alt="Crystal4" height="75px" width="160px"></div>
+            <div id = "blank2" class = col-md-2></div>
         </div>
 
-        <br><br>
+        <br>
 
     <!-- Current Score Count Goes Here -->
     <div id = scoretext class = row>
