--- a/index.html
+++ b/index.html
@@ -7,23 +7,26 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 <script src="assets/javascript/game.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Rubik:900" rel="stylesheet">
+
+<!-- Added link to the jQuery library -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
 
 <div class = container>
     <!-- Page Header Here -->
     <div id = header class = row>
-        <div id = "blank1" class = col-md-4></div>
-        <div id = "title" class = col-md-4>Crystal Collector Game!</div>
-        <div id = "blank2" class = col-md-4></div>
+        <div id = "blank1" class = col-md-3></div>
+        <div id = "title" class = col-md-6>Crystal Collector Game!</div>
+        <div id = "blank2" class = col-md-3></div>
     </div>
 
     <br>
 
     <!-- Game Instructions Here -->
     <div id = instructions class = row>
-            <div id = "blank1" class = col-md-2></div>
-            <div id = "title" class = col-md-8>You will be given a random number at the start of the game.
+            <div id = "blank1" class = col-md-1></div>
+            <div id = "title" class = col-md-10>You will be given a random number at the start of the game.
                 <br><br>
                 There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score.
                 <br><br>
@@ -35,15 +38,15 @@
                 <br><br>
                 Good Luck!
             </div>
-            <div id = "blank2" class = col-md-2></div>
+            <div id = "blank2" class = col-md-1></div>
         </div>
 
         <br>
 
     <!-- Random Number Goes Here -->
-    <div id = number class = row>
+    <div id = randnum class = row>
             <div id = "blank1" class = col-md-4></div>
-            <div id = "number" class = col-md-4>number placeholder</div>
+            <div id = "number" class = col-md-4></div>
             <div id = "blank2" class = col-md-4></div>
         </div>
 
@@ -57,11 +60,11 @@
     <!-- Crystals Go Here -->
     <div id = boxes class = row>
             <div id = "blank1" class = col-md-2></div>
-            <div id = "crystal1" class = col-md-2><img id="Crystal1" src="assets/images/crystal1.jpg" alt="Crystal1" height="75px" width="160px"></div>
-            <div id = "crystal2" class = col-md-2><img id="Crystal2" src="assets/images/crystal2.jpg" alt="Crystal2" height="75px" width="160px"></div>
-            <div id = "crystal3" class = col-md-2><img id="Crystal3" src="assets/images/crystal3.jpg" alt="Crystal3" height="75px" width="160px"></div>
-            <div id = "crystal4" class = col-md-2><img id="Crystal4" src="assets/images/crystal4.jpg" alt="Crystal4" height="75px" width="160px"></div>
-            <div id = "blank2" class = col-md-2></div>
+            <button id = "crystal1" class = col-md-2><img id="Crystal1" src="assets/images/crystal1.jpg" alt="Crystal1" height="75px" width="160px"></button>
+            <button id = "crystal2" class = col-md-2><img id="Crystal2" src="assets/images/crystal2.jpg" alt="Crystal2" height="75px" width="160px"></button>
+            <button id = "crystal3" class = col-md-2><img id="Crystal3" src="assets/images/crystal3.jpg" alt="Crystal3" height="75px" width="160px"></button>
+            <button id = "crystal4" class = col-md-2><img id="Crystal4" src="assets/images/crystal4.jpg" alt="Crystal4" height="75px" width="160px"></button>
+            <button id = "blank2" class = col-md-2></div>
         </div>
 
         <br>
