values assigned to buttons

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <link rel="stylesheet" src="assets/css/reset.css">
 <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="assets/javascript/game.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Rubik:900" rel="stylesheet">
 
-<!-- Added link to the jQuery library -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 </head>
 <body>
 
@@ -77,7 +77,7 @@
     </div>
     <div id = scorenum class = row>
             <div id = "blank1" class = col-md-4></div>
-            <div id = "scorenum" class = col-md-4>Number Placeholder</div>
+            <div id = "currscore" class = col-md-4>Number Placeholder</div>
             <div id = "blank2" class = col-md-4></div>
         </div>
 
