working before formatting

--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
 
     <!-- Count of Wins/Losses Goes Here -->
     <div id = winslosses class = row>
-            <div id = "blank1" class = col-md-4></div>
-            <div id = "WL" class = col-md-4>WL placeholder</div>
-            <div id = "blank2" class = col-md-4></div>
+            <div id = "blank1" class = col-md-3></div>
+            <div id = "wins" class = col-md-3>Wins</div>
+            <div id = "losses" class = col-md-3>Losses</div>
+            <div id = "blank2" class = col-md-3></div>
         </div>
 
     <!-- Crystals Go Here -->
@@ -77,7 +78,7 @@
     </div>
     <div id = scorenum class = row>
             <div id = "blank1" class = col-md-4></div>
-            <div id = "currscore" class = col-md-4>Number Placeholder</div>
+            <div id = "currscore" class = col-md-4></div>
             <div id = "blank2" class = col-md-4></div>
         </div>
 
