--- a/index.html
+++ b/index.html
@@ -35,8 +35,6 @@
                 The value of each crystal is hidden from you until you click on it.
                 <br><br>
                 Each time the game starts, the game will change the values attached to each crystal.
-                <br><br>
-                Good Luck!
             </div>
             <div id = "blank2" class = col-md-1></div>
         </div>
@@ -61,17 +59,17 @@
     <!-- Crystals Go Here -->
     <div id = boxes class = row>
             <div id = "blank1" class = col-md-2></div>
-            <button id = "crystal1" class = col-md-2><img id="Crystal1" src="assets/images/crystal1.jpg" alt="Crystal1" height="75px" width="160px"></button>
-            <button id = "crystal2" class = col-md-2><img id="Crystal2" src="assets/images/crystal2.jpg" alt="Crystal2" height="75px" width="160px"></button>
-            <button id = "crystal3" class = col-md-2><img id="Crystal3" src="assets/images/crystal3.jpg" alt="Crystal3" height="75px" width="160px"></button>
-            <button id = "crystal4" class = col-md-2><img id="Crystal4" src="assets/images/crystal4.jpg" alt="Crystal4" height="75px" width="160px"></button>
-            <button id = "blank2" class = col-md-2></div>
+            <div id = "crystal1" class = col-md-2><img id="Crystal1" src="assets/images/crystal1.jpg" alt="Crystal1" height="75px" width="160px"></div>
+            <div id = "crystal2" class = col-md-2><img id="Crystal2" src="assets/images/crystal2.jpg" alt="Crystal2" height="75px" width="160px"></div>
+            <div id = "crystal3" class = col-md-2><img id="Crystal3" src="assets/images/crystal3.jpg" alt="Crystal3" height="75px" width="160px"></div>
+            <div id = "crystal4" class = col-md-2><img id="Crystal4" src="assets/images/crystal4.jpg" alt="Crystal4" height="75px" width="160px"></div>
+            <div id = "blank2" class = col-md-2></div>
         </div>
 
         <br>
 
     <!-- Current Score Count Goes Here -->
-    <div id = scoretext class = row>
+    <div id = scoretextrow class = row>
         <div id = "blank1" class = col-md-4></div>
         <div id = "scoretext" class = col-md-4>Your Current Score Is:</div>
         <div id = "blank2" class = col-md-4></div>
